Login Interface done

--- a/My Showcase/Info.plist
+++ b/My Showcase/Info.plist
@@ -43,5 +43,14 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>UIAppFonts</key>
+	<array>
+		<string>NotoSans-Regular.ttf</string>
+		<string>NotoSans-Italic.ttf</string>
+		<string>NotoSans-Bold.ttf</string>
+		<string>NotoSans-BoldItalic.ttf</string>
+		<string>NotoEmoji-Regular.ttf</string>
+		<string>NotoColorEmoji.ttf</string>
+	</array>
 </dict>
 </plist>
